--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-bonjour
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Test</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<header>
+  <h1>Test</h1>
+</header>
